--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorPink">#e71c4c</color>
+    <color name="colorGrey">#e71c4c</color>
+    <color name="colorGreyBlur">#e71c4c</color>
 </resources>
